# galaxy-simulation

./: .clang-format  CMakeLists.txt  README.md  main.cpp
src/: debugSystem.hpp  main.cpp
src/camera/: camera.cpp  camera.hpp
src/core/: buffer.cpp  buffer.hpp  context.cpp  context.hpp  descriptors.cpp  descriptors.hpp  swapchain.cpp  swapchain.hpp
src/engine/: engine.cpp  engine.hpp
src/gui/: imguiSystem.cpp  imguiSystem.hpp
src/include/: inc.hpp
src/pipelines/: pipeline.cpp  pipeline.hpp
src/renderer/: renderer.cpp  renderer.hpp
src/scene/: particle.cpp  particle.hpp
src/shaders/: compute.slang  computeInit.slang  galaxy.slang  grid.slang
src/window/: window.cpp  window.hpp
